# lif_thesis

./: .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: render.yml
api/: main.py
app/: dashboard.py
app/pages/: 1_Live_Predictions.py  2_Model_Selection.py  3_Particle_Profiles.py  4_Species_Statistics.py  5_Raw_File_Explorer.py
configs/: active_model.json
data/live_rapid_e/inspection/: raw_inspection_report.csv
data/live_rapid_e/parsed/: raw_file_summary.csv
data/metadata/: parse_metadata.parquet  raw_file_metadata.parquet
models/: model_registry.csv
models/configs/: multimodal_species_v1_lifetime_scaler.joblib  multimodal_species_v1_scalar_scaler.joblib  multimodal_species_v1_scattering_scaler.joblib  multimodal_species_v1_spectrometer_scaler.joblib
models/label_maps/: multimodal_species_v1_label_encoder.joblib  multimodal_species_v1_labels.json
models/trained/exp00_paper_rf_v1/: feature_names.json  metadata.json
reports/: _quarto.yml  about.qmd  custom.css  index.qmd
reports/notebooks/: 00_paper_reproduction.ipynb  01_baseline_rf_results.ipynb  02_updated_rf_results.ipynb  exploration.ipynb
scripts/: evaluate.py  prepare_data.py  run_experiment.py  simulate_live_predictions.py
src/automatic-recognition/data/: loaders.py
src/automatic-recognition/evaluation/: metrics.py  plots.py
src/automatic-recognition/experiments/: exp01_baseline_rf.py  exp02_tabular.py
src/automatic-recognition/models/: cnn1d.py  rf.py
src/automatic-recognition/preprocessing/: spectra.py  transforms.py
src/automatic-recognition/training/: losses.py
src/lif_thesis/: __init__.py
src/lif_thesis/data/: file_watcher.py  loaders.py  parsers.py  preprocessing.py  rapid_e_raw_parser.py  schemas.py  splits.py
src/lif_thesis/evaluation/: metrics.py  mixture_eval.py
src/lif_thesis/experiments/: exp00_paper_reproduction.py  exp01_baseline_rf.py  exp01_grouped_paper_features.py  exp02_grouped_engineered_features.py  exp02_updated_rf.py  exp03_cnn_spectra.py  exp03_hyperparameter_search.py  exp04_baseline_cnn.py  exp05_mixtures.py  exp05_multimodal_deep_learning.py
src/lif_thesis/features/: spectra.py
src/lif_thesis/models/: baseline_rf.py  cnn1d.py  predict.py  registry.py  updated_rf.py
src/lif_thesis/realtime/: database.py  inference_engine.py  multimodal_inference_engine.py  prediction_store.py  stream_processor.py
src/lif_thesis/streaming/: file_extract.py  raw_inspector.py  sftp_watcher.py
src/lif_thesis/streaming/rapid_e_downloads/D_000012994_201602111747/: D_000000080_201602111747.raw
src/lif_thesis/training/: calibrate.py  train.py
tests/: test_sftp.py
