[project]
name = "lif_thesis"
version = "0.1.0"
description = "Real-time identification of bacterial bioaerosols using Rapid-E fluorescence data and machine learning."
readme = "README.md"
requires-python = ">=3.11"

authors = [
{ name = "Christopher Perry", email = "[chrisperry437@gmail.com](mailto:chrisperry437@gmail.com)" }
]

license = { text = "MIT" }

dependencies = [

```
# Core scientific stack
"numpy>=1.26",
"pandas>=2.2",
"scipy>=1.12",

# Machine learning
"scikit-learn>=1.5",
"joblib>=1.4",

# Deep learning
"torch>=2.2,<3.0",

# Visualization
"matplotlib>=3.8",
"seaborn>=0.13",
"plotnine>=0.13",
"mizani>=0.11",

# Experiment tracking / utilities
"tqdm>=4.66",

# Data formats
"pyarrow>=16.0",
"fastparquet>=2024.5.0",

# Dashboard
"streamlit>=1.36",

# API
"fastapi>=0.115",
"uvicorn[standard]>=0.30",

# Database
"sqlalchemy>=2.0",
"psycopg2-binary>=2.9",

# Validation
"pydantic>=2.8",

# Configuration
"pyyaml>=6.0",

# File monitoring
"watchdog>=4.0",

# Notebook support
"jupyter>=1.0",
"ipykernel>=6.29"
```

]

[project.optional-dependencies]

dev = [
"pytest>=8.0",
"pytest-cov>=5.0",
"black>=24.0",
"ruff>=0.5",
"mypy>=1.10",
"pre-commit>=3.7"
]

gpu = [
"torch>=2.2,<3.0"
]

[build-system]
requires = ["uv", "uv_build"]
build-backend = "uv_build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
