[project]
name = "lif_thesis"
version = "0.1.0"
description = "Real-time identification of bacterial bioaerosols using Rapid-E fluorescence data and machine learning."
readme = "README.md"
requires-python = ">=3.11"

authors = [
{ name = "Christopher Perry", email = "chrisperry437@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
"numpy>=1.26",
"pandas>=2.2",
"scipy>=1.12",
"scikit-learn>=1.5",
"joblib>=1.4",
"torch>=2.2,<3.0",
"matplotlib>=3.8",
"seaborn>=0.13",
"plotnine>=0.13",
"mizani>=0.11",
"tqdm>=4.66",
"pyarrow>=16.0",
"fastparquet>=2024.5.0",
"streamlit>=1.36",
"fastapi>=0.115",
"uvicorn[standard]>=0.30",
"sqlalchemy>=2.0",
"psycopg2-binary>=2.9",
"pydantic>=2.8",
"pyyaml>=6.0",
"watchdog>=4.0",
"jupyter>=1.0",
"ipykernel>=6.29"
]

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"pytest-cov>=5.0",
"black>=24.0",
"ruff>=0.5",
"mypy>=1.10",
"pre-commit>=3.7"
]

gpu = [
"torch>=2.2,<3.0"
]

[build-system]
requires = [
"setuptools>=69",
"wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
